Mon Dec 21 10:21:22 2015  Ilya Vassilevsky <vassilevsky@gmail.com>

	* lib/net/http.rb (open_timeout): update default value in RDoc
	  [ruby-core:72413]

Mon Dec 21 10:18:46 2015  Kazuki Yamaguchi  <k@rhe.jp>

	* vm_backtrace.c (rb_profile_frames): ignore ifunc frames as it
	  did before.  [ruby-core:72409] [Bug #11851]

Mon Dec 21 09:33:17 2015  Karol Bucek  <kares@users.noreply.github.com>

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL::SSLSocket): fix
	  NotImplementedError typo.  [Fix GH-1165]

Sun Dec 20 20:54:51 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* cgi/escape/escape.c: Optimize CGI.escapeHTML for
	  ASCII-compatible encodings.  [Fix GH-1164]

Sun Dec 20 15:36:46 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/erb.rb: revert r53123. It breaks compatibility like thor and
	  rspec-rails.
	  We should try with Ruby 2.4 or 3.0.
	  [Bug #11842][ruby-core:72374]
	* lib/rdoc/erb_partial.rb: ditto.
	* template/verconf.h.tmpl: ditto.

Sun Dec 20 11:43:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): allow here documents in labeled
	  argument.  [ruby-core:72396] [Bug #11849]

Sun Dec 20 11:14:11 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_mod_define_method): should check Symbol or not.
	  [Bug #11850]

	* test/ruby/test_method.rb: add a test.

Sun Dec 20 11:01:57 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_mod_define_method): fix notation.

Sun Dec 20 10:54:15 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_new): fix notation.

Sun Dec 20 00:29:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_proc_get_iseq): proc made from symbol does not have
	  iseq.  fix infinite loop.  [ruby-core:72381] [Bug #11845]

Sat Dec 19 20:06:10 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* enc/windows_1250.c: Should not use C++ style comments (C99 feature).
	  [Bug #11843]

Sat Dec 19 17:17:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):