@@ -1,3 +1,8 @@
+Mon Dec 21 12:15:32 2015  Kimura Wataru  <kimuraw@i.nifty.jp>
+
+	* test/ruby/test_io.rb: handled rlimit value same as r52277
+	  [Bug #11852][ruby-dev:49446]
+
 Mon Dec 21 10:21:22 2015  Ilya Vassilevsky <vassilevsky@gmail.com>
 
 	* lib/net/http.rb (open_timeout): update default value in RDoc
